tools/cluster/netbird.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-agent
  namespace: tools
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: netbird-agent
  template:
    metadata:
      labels:
        app: netbird-agent
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: netbird-agent
          image: netbirdio/netbird:0.80.0
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: netbird-agent
              mountPath: /var/lib/netbird
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "512Mi"
      restartPolicy: Always
      volumes:
        - name: netbird-agent
          hostPath:
            path: /mnt/cephfs/docker/tools/netbird
            type: Directory
