tools/cluster/syncthing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: tools
  labels:
    app: syncthing
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: syncthing
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      # nodeSelector:
      #   kubernetes.io/arch: amd64
      containers:
        - name: syncthing
          image: reg.ygnv.my.id/docker/linuxserver/syncthing:2.1.6
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 256Mi
          ports:
            - containerPort: 8384
              name: gui
            - containerPort: 22000
              name: sync-tcp
              protocol: TCP
            - containerPort: 22000
              name: sync-udp
              protocol: UDP
            - containerPort: 21027
              name: discovery
              protocol: UDP
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: cephfs-volume
              mountPath: /cephfs
            - name: data-volume
              mountPath: /backup
      volumes:
        - name: config-volume
          hostPath:
            path: /mnt/cephfs/docker/tools/syncthing
            type: Directory
        - name: cephfs-volume
          hostPath:
            path: /mnt/cephfs
            type: Directory
        - name: data-volume
          hostPath:
            path: /mnt/backup
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: tools
  labels:
    app: syncthing
  annotations:
    metallb.io/address-pool: "main-pool"
    # metallb.io/allow-shared-ip: "traefik"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.1.54
  selector:
    app: syncthing
  ports:
    - port: 8384
      targetPort: 8384
      name: gui
    - port: 22000
      targetPort: 22000
      protocol: TCP
      name: sync-tcp
    - port: 22000
      targetPort: 22000
      protocol: UDP
      name: sync-udp
    - port: 21027
      targetPort: 21027
      protocol: UDP
      name: discovery
