tools/cluster/semaphore.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: tools
  labels:
    app: semaphore
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: semaphore
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
      - name: semaphore
        image: reg.ygnv.my.id/docker/semaphoreui/semaphore:v2.19.16
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 128Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /var/lib/semaphore
        - name: config
          mountPath: /etc/semaphore
      volumes:
      - name: data
        hostPath:
          path: /mnt/cephfs/docker/tools/semaphore/data
          type: Directory
      - name: config
        hostPath:
          path: /mnt/cephfs/docker/tools/semaphore/config
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: tools
spec:
  selector:
    app: semaphore
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  namespace: tools
  labels:
    app: semaphore
spec:
  entryPoints:
  - http
  - https
  routes:
    - match: Host(`semaphore.ygnv.my.id`)
      kind: Rule
      services:
        - name: semaphore
          port: 3000
  tls: {}
